UI/src/css/molecules/m-message.css
[class^='m-message'] {
    border-radius: var(--border-radius);
    font-size: var(--font-size-s);
    inline-size: fit-content;
    padding: var(--space-2) var(--space-4) var(--space-2)
        calc(var(--space-4) * 2);
    position: relative;

    &::before {
        background-repeat: no-repeat;
        block-size: 1.25rem;
        content: '';
        inline-size: 1.25rem;
        inset: 0.5rem 0 0 0.5rem;
        position: absolute;
    }
}

/* Uses color-mix() function to fix a11y color contrast. */
.m-message-error {
    background-color: rgba(var(--color-error), 0.15);
    color: color-mix(in srgb, rgb(var(--color-error)) 80%, var(--color-text));

    &::before {
        background-image: url('../../images/icon-error.svg');
    }
}

.m-message-warning {
    background-color: rgba(var(--color-warning), 0.15);
    color: color-mix(in srgb, rgb(var(--color-warning)) 45%, var(--color-text));

    &::before {
        background-image: url('../../images/icon-warning.svg');
    }
}

.m-message-success {
    background-color: rgba(var(--color-success), 0.15);
    color: color-mix(in srgb, rgb(var(--color-success)) 45%, var(--color-text));

    &::before {
        background-image: url('../../images/icon-success.svg');
    }
}

.m-message-information {
    background-color: rgba(var(--color-information), 0.15);
    color: color-mix(
        in srgb,
        rgb(var(--color-information)) 60%,
        var(--color-text)
    );

    &::before {
        background-image: url('../../images/icon-information.svg');
    }
}

